create hasRole middleware
